fix bug with invisible background image in Firefox

--- a/src/scss/sections/_design.scss
+++ b/src/scss/sections/_design.scss
@@ -1,6 +1,7 @@
 #design {
   padding-bottom: 0;
-  background: url(../../assets/img/design/bg.jpg) center no-repeat / cover;
+  background: url(../../assets/img/design/bg.jpg) center no-repeat;
+  background-size: cover;
 
   &__devices {
     position: relative;
